[tool.flake8]
max-line-length = 88

[tool.poetry]
name = "python-urbandict"
version = "0.3.12"
description = "Python wrapper for the Urban Dictionary API."
authors = ["atbuy <buy@atbuy.dev>"]
license = "MIT"
homepage = "https://github.com/atbuy/pyurbandict"
repository = "https://github.com/atbuy/pyurbandict"
keywords = ["urban", "dictionary", "api", "wrapper", "python"]
include = ["README.md"]
readme = "README.md"
packages = [
    {include = "pyurbandict"}
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.4"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/atbuy/pyurbandict/issues"
"Source Code" = "https://github.com/atbuy/pyurbandict"
"CI/CD" = "https://github.com/atbuy/pyurbandict/actions"

[tool.poetry.group.dev.dependencies]
tox = "^4.23.2"
pre-commit = "^4.0.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
ruff = "^0.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
