[project]
name = "python-urbandict"
version = "0.3.14"
description = "Python wrapper for the Urban Dictionary API."
authors = [{ name = "atbuy", email = "buy@atbuy.dev" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["urban", "dictionary", "api", "wrapper", "python"]
dependencies = ["requests==2.32.5"]

[project.optional-dependencies]
dev = [
  "pre-commit==4.5.1",
  "ruff==0.14.10",
  "tox==4.33.0",
  "pytest==9.0.2",
  "pytest-cov==7.0.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/atbuy/pyurbandict/issues"
"Source Code" = "https://github.com/atbuy/pyurbandict"
"CI/CD" = "https://github.com/atbuy/pyurbandict/actions"

[tool.setuptools]
packages = ["pyurbandict"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
